[package]
name = "Rust_covpyo3"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Rust_covpyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rust-htslib = { version = "*"}
strand_specifier = { git = "https://github.com/rLannes/BAMstrandSpecifier" }
CigarParser = { git = "https://github.com/rLannes/CigarParser" }