[package]
name = "Rust_covpyo3"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Rust_covpyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rust-htslib = { version = "1.0.0"}
#hts-sys = "=2.1.4"
strand_specifier = { git = "https://github.com/rLannes/BAMstrandSpecifier" }
CigarParser = { git = "https://github.com/rLannes/CigarParser" }
openssl = { version = "*", features = ["vendored"] }